--- a/angular-alain/package.json
+++ b/angular-alain/package.json
@@ -75,6 +75,13 @@
     "@types/node": "~8.9.4",
     "@types/jszip": "^3.1.3",
     "@types/mockjs": "^1.0.0",
+    "@types/jquery": "^3.2.12",
+    "@types/jquery.blockui": "0.0.28",
+    "@types/jquery.validation": "^1.16.3",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.2.34",
+    "@types/signalr": "^2.2.33",
+    "@types/toastr": "^2.1.33",
     "codecov": "^3.0.2",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
@@ -102,7 +109,9 @@
     "xlsx": "^0.12.12",
     "less": "~2.7.0",
     "ng-alain": "^1.0.1",
-    "nswag": "^11.12.7"
+    "nswag": "^11.12.7",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13"
   },
   "lint-staged": {
     "*.{cmd,html,json,md,sh,txt,xml,yml}": [
